--- a/financial-connections/res/values/strings.xml
+++ b/financial-connections/res/values/strings.xml
@@ -116,17 +116,17 @@
     <string name="stripe_networking_link_login_warmup_title">Continue with Link</string>
     <string name="stripe_networking_link_login_warmup_cta_continue">Continue with Link</string>
     <string name="stripe_networking_link_login_warmup_cta_skip">Not now</string>
-    <string name="stripe_networking_verification_title">Save your account to Link</string>
+    <string name="stripe_networking_verification_title">Confirm it\'s you</string>
     <string name="stripe_networking_verification_desc">Enter the code sent to %1$s</string>
     <string name="stripe_networking_verification_email">Signing in as %1$s</string>
     <string name="stripe_link_account_picker_title">Select an account to connect to %1$s</string>
     <string name="stripe_link_account_picker_title_nobusiness">Select an account to connect to this business</string>
     <string name="stripe_link_account_picker_new_account">New bank account</string>
     <string name="stripe_link_account_picker_cta">Connect account</string>
-    <string name="stripe_link_stepup_verification_title">Confirm your email</string>
+    <string name="stripe_link_stepup_verification_title">Verify your email</string>
     <string name="stripe_link_stepup_verification_desc">Enter the code sent to %1$s. We periodically request this extra step to keep your account safe.</string>
     <string name="stripe_link_stepup_verification_resend_code"><annotation clickable="resend_code">Resend code</annotation></string>
-    <string name="stripe_networking_save_to_link_verification_title">Verify it\'s you</string>
+    <string name="stripe_networking_save_to_link_verification_title">Confirm it\'s you</string>
     <string name="stripe_networking_save_to_link_verification_cta_negative">Not now</string>
     <string name="stripe_verification.codeInvalid">Hmm, that code didn’t work. Double check it and try again.</string>
     <string name="stripe_verification.codeExpired">It looks like the verification code you provided is not valid anymore. Get a new code and try again.</string>
