--- a/paymentsheet/res/values/strings.xml
+++ b/paymentsheet/res/values/strings.xml
@@ -53,6 +53,8 @@
   <string name="stripe_paymentsheet_microdeposit">Stripe will deposit $0.01 to your account in 1-2 business days. Then you’ll get an email with instructions to complete payment to %s.</string>
   <!-- Content for alert popup prompting to confirm modifying saved payment method. -->
   <string name="stripe_paymentsheet_modify_pm">Edit %s</string>
+  <!-- Text shown above list of new payment method options. -->
+  <string name="stripe_paymentsheet_new_pm">New payment method</string>
   <!-- Title of a section containing multiple payment methods that can selected and will collect the payment information from the user. -->
   <string name="stripe_paymentsheet_or_pay_using">Or pay using</string>
   <!-- Title of a section containing a card form that will collect the payment information from the user. -->
@@ -77,6 +79,8 @@
   <string name="stripe_paymentsheet_remove_pm">Remove %s</string>
   <!-- A button used for saving a new payment method -->
   <string name="stripe_paymentsheet_save">Save</string>
+  <!-- Text shown above a saved payment method -->
+  <string name="stripe_paymentsheet_saved">Saved</string>
   <!-- Title shown above a form where the customer can enter payment information like credit card details, email, billing address, etc. -->
   <string name="stripe_paymentsheet_save_a_new_payment_method">Save a new payment method</string>
   <!-- US Bank Account copy title for Mobile payment element form -->
@@ -101,4 +105,6 @@
   <string name="stripe_upi_polling_payment_failed_message">Please go back and select another payment method</string>
   <!-- Text on a screen that indicates a payment has failed -->
   <string name="stripe_upi_polling_payment_failed_title">Payment failed</string>
+  <!-- Text on a button to view more saved payment methods -->
+  <string name="stripe_view_more">View more</string>
 </resources>
