--- a/payments-ui-core/res/values/strings.xml
+++ b/payments-ui-core/res/values/strings.xml
@@ -65,8 +65,12 @@
   <string name="stripe_pay_button_amount">Pay %s</string>
   <!-- Title for a bank account payment method -->
   <string name="stripe_payment_method_bank">Bank</string>
+  <!-- Title shown above a view allowing the customer to save a card. -->
+  <string name="stripe_paymentsheet_add_new_card">Add new card</string>
   <!-- Card details entry form header title -->
   <string name="stripe_paymentsheet_add_payment_method_card_information">Card information</string>
+  <!-- Title shown above a view allowing the customer to save a US bank account. -->
+  <string name="stripe_paymentsheet_add_us_bank_account">Add US bank account</string>
   <!-- Header text shown above a UPI ID text field -->
   <string name="stripe_paymentsheet_buy_using_upi_id">Buy using a UPI ID</string>
   <!-- Payment Method type brand name. -->
@@ -93,8 +97,4 @@
   <string name="stripe_setup_button_label">Set up</string>
   <!-- Label for UPI ID number field on form -->
   <string name="stripe_upi_id_label">UPI ID</string>
-  <!-- Title for credit card screen -->
-  <string name="stripe_paymentsheet_add_new_card">Add new card</string>
-  <!-- Title for US Bank Account Screen -->
-  <string name="stripe_paymentsheet_add_us_bank_account">Add US bank account</string>
 </resources>
