--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="alma_example">Alma</string>
     <string name="sunbit_example">Sunbit</string>
     <string name="billie_example">Billie</string>
+    <string name="satispay_example">Satispay</string>
     <string name="swish_example">Swish</string>
     <string name="mobilepay_example">MobilePay</string>
     <string name="card_brands">Card Brands</string>
