--- a/payments-core/res/values/strings.xml
+++ b/payments-core/res/values/strings.xml
@@ -71,7 +71,7 @@
   <!-- Pay over time with Affirm copy -->
   <string name="stripe_affirm_buy_now_pay_later">Pay over time with &lt;img src=\"affirm\"&gt;.</string>
   <!-- Pay over time with Affirm copy without using logo image within text. -->
-  <string name="stripe_affirm_buy_now_pay_later_plaintext">Pay over time with Affirm.</string>
+  <string name="stripe_affirm_buy_now_pay_later_plaintext">Pay over time with Affirm</string>
   <!-- Label for Name on account field on form -->
   <string name="stripe_au_becs_account_name">Name on account</string>
   <!-- Placeholder for AU BECS BSB number -->
