--- a/financial-connections/res/values/strings.xml
+++ b/financial-connections/res/values/strings.xml
@@ -47,6 +47,8 @@
     <string name="stripe_data_accessible_type_balances">balances</string>
     <string name="stripe_data_accessible_type_transactions">transactions</string>
     <string name="stripe_data_accessible_type_ownership">account ownership details</string>
+    <string name="stripe_data_sharing_callout_link_business">Your login and financial details are never shared with %1$s. <annotation clickable="learn_more">Learn more</annotation></string>
+    <string name="stripe_data_sharing_callout_link_no_business">Your login and financial details are never shared with this business. <annotation clickable="learn_more">Learn more</annotation></string>
     <string name="stripe_success_pane_title">Success</string>
     <string name="stripe_success_pane_desc_microdeposits">You can expect micro-deposits to account ••••%1$s in 1–2 days and an email with further instructions.</string>
     <string name="stripe_success_pane_desc_microdeposits_no_account">You can expect micro-deposits to your account in 1–2 days and an email with further instructions.</string>
